ajustar automaticamente o OpenApiConfig